Fixing modal close spacing on mobile

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -866,7 +866,7 @@ html, body {
   top: 15px;
   right: 15px;
   transition: background-color 0.3s ease, transform 0.2s ease;
-  margin: 10px;
+  margin-top: 15px;
 }
 
 /* Hover and Focus States */
